// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render properly 1`] = `
.c0 {
  max-width: 800px;
  margin: 16px auto;
}

.c1 {
  margin-bottom: 50px;
}

.c1 nav {
  margin-bottom: 50px;
}

.c2 {
  line-height: 1.5;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid;
  outline: none;
}

@media (min-width:760px) {
  .c1 nav {
    margin-bottom: 0;
  }
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <footer
          class="c1"
        >
          <span
            class="c2"
          >
            CC-BY 
            2020
            , built with 
          </span>
          <a
            class="c3"
            href="https://gatsbyjs.org"
            rel="noopener"
            target="_blank"
          >
            gatsby
          </a>
          <span
            class="c2"
          >
             • 
          </span>
        </footer>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Footer /> should render the repository url if passed 1`] = `
<body>
  .c0 {
  max-width: 800px;
  margin: 16px auto;
}

.c1 {
  margin-bottom: 50px;
}

.c1 nav {
  margin-bottom: 50px;
}

.c2 {
  line-height: 1.5;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid;
  outline: none;
}

@media (min-width:760px) {
  .c1 nav {
    margin-bottom: 0;
  }
}

<div>
    <section
      class="c0"
    >
      <main>
        <footer
          class="c1"
        >
          <span
            class="c2"
          >
            CC-BY 
            2020
            , built with 
          </span>
          <a
            class="c3"
            href="https://gatsbyjs.org"
            rel="noopener"
            target="_blank"
          >
            gatsby
          </a>
          <span
            class="c2"
          >
             • 
          </span>
          <a
            class="c3"
            href="https://github.com/diegocosta/diegocosta.com.br"
            rel="noopener"
            target="_blank"
          >
            source code
          </a>
        </footer>
      </main>
    </section>
  </div>
</body>
`;
